--- a/.github/workflows/ssl_expiry_check.yml
+++ b/.github/workflows/ssl_expiry_check.yml
@@ -20,8 +20,9 @@ jobs:
 
       - name: Run SSL Expiry Check and Send Slack Alert
         run: |
+          cd scripts
           npm install
           node ssl_expiry_check_script.js
         env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}  # Use the correct secret name
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
 
