Add SSL expiry check workflow

--- a/.github/workflows/ssl_expiry_check.yml
+++ b/.github/workflows/ssl_expiry_check.yml
@@ -1,4 +1,5 @@
-name: Check SSL Expiry and Notify Slack
+name: Check SSL Expiry
+
 on:
   schedule:
     - cron: "0 0 * * *"
@@ -20,22 +21,17 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Print Environment Variables  # Debugging line
+        run: env
+
       - name: Run SSL Expiry Check and Notify Slack
         run: |
+          # Use your SSL expiry check script here
+          # Replace `YOUR_COMMAND_HERE` with the actual command
           echo "Running SSL Expiry Check"
-
-          # Run your SSL expiry check script and capture its output
-          ssl_expiry_result=$(node .github/scripts/ssl_expiry_check_script.js)
-
-          # Extract domain name and days until expiry from the result
-          domain_name=$(echo "$ssl_expiry_result" | grep -o 'Domain : [^ ]*' | cut -d' ' -f3-)
-          days_until_expiry=$(echo "$ssl_expiry_result" | grep -o 'will expire in [0-9]* days' | cut -d' ' -f4)
-
-          # Format the Slack message
-          slack_message="SSL Expiry Alert\n   * Domain : $domain_name\n   * Warning : The SSL certificate for $domain_name will expire in $days_until_expiry."
-
-          # Send Slack notification using the formatted message
-          curl -X POST -H "Content-type: application/json" --data "{\"text\":\"$slack_message\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
+          echo "Sending Slack Notification"
+          echo "SLACK_WEBHOOK_URL: $SLACK_WEBHOOK_URL"  # Debugging line
+          curl -X POST -H "Content-type: application/json" --data '{"text":"SSL Expiry Alert"}' $SLACK_WEBHOOK_URL
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
