Add SSL expiry check workflow and script

--- a/.github/workflows/ssl_expiry_check.yml
+++ b/.github/workflows/ssl_expiry_check.yml
@@ -1,5 +1,4 @@
 name: Check SSL Expiry
-
 on:
   schedule:
     - cron: "0 0 * * *"
@@ -21,17 +20,10 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Print Environment Variables  # Debugging line
-        run: env
-
       - name: Run SSL Expiry Check and Notify Slack
         run: |
-          # Use your SSL expiry check script here
-          # Replace `YOUR_COMMAND_HERE` with the actual command
           echo "Running SSL Expiry Check"
-          echo "Sending Slack Notification"
-          echo "SLACK_WEBHOOK_URL: $SLACK_WEBHOOK_URL"  # Debugging line
-          curl -X POST -H "Content-type: application/json" --data '{"text":"SSL Expiry Alert"}' $SLACK_WEBHOOK_URL
+          node /home/ec2-user/Day3-task/.github/scripts/ssl_expiry_check_script.js
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
