--- a/.github/workflows/ssl_expiry_check.yml
+++ b/.github/workflows/ssl_expiry_check.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run SSL Expiry Check and Notify Slack
         run: |
           echo "Running SSL Expiry Check"
-          node /home/ec2-user/Day3-task/.github/scripts/ssl_expiry_check_script.js
+          node /Day3-task/.github/scripts/ssl_expiry_check_script.js
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
