--- a/.github/workflows/ssl_expiry_check.yml
+++ b/.github/workflows/ssl_expiry_check.yml
@@ -27,10 +27,17 @@ jobs:
 
           # Run your SSL expiry check script and capture its output
           ssl_expiry_result=$(node .github/scripts/ssl_expiry_check_script.js)
-          echo "$ssl_expiry_result"  # Print the captured output
 
-          # Send Slack notification using the captured output
-          curl -X POST -H "Content-type: application/json" --data "{\"text\":\"$ssl_expiry_result\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
+          # Iterate through the alerts and format the message
+          formatted_message=""
+          for item in $ssl_expiry_result; do
+            domain=$(echo "$item" | jq -r '.domain')
+            days=$(echo "$item" | jq -r '.daysUntilExpiry')
+            formatted_message+="Domain: $domain\nDays Until Expiry: $days\n\n"
+          done
+
+          # Send Slack notification using the formatted message
+          curl -X POST -H "Content-type: application/json" --data "{\"text\":\"$formatted_message\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
