--- a/.github/workflows/server_action.yml
+++ b/.github/workflows/server_action.yml
@@ -1,28 +1,28 @@
-name: Server Action
+name: SSH Deploy
 
 on:
-  schedule:
-    - cron: "0 0 * * *"  # Run daily at midnight
-  workflow_dispatch:    # Allow manual triggering
+  push:
+    branches:
+      - main
 
 jobs:
-  perform-action:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.1
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}  # Use the secret you created
+    - name: Set up SSH key
+      uses: webfactory/ssh-agent@v0.5.1
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
-      - name: Run Server Action
-        run: |
-          # Use SSH to execute commands on the server
-          ssh -i ./root/.ssh/id_rsa -o StrictHostKeyChecking=no -v ec2-user@54.224.70.214 'bash -s' << EOF
-          echo 'Hello from GitHub Actions'
-          # Your other commands here
-          EOF
+    - name: Use SSH to execute commands on the server
+      run: |
+        ssh -o StrictHostKeyChecking=no -i /root/.ssh/id_rsa ec2-user@54.224.70.214 'bash -s' << EOF
+        echo 'Hello from GitHub Actions'
+        # Your other commands here
+        EOF
 
