--- a/.github/workflows/server_action.yml
+++ b/.github/workflows/server_action.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Deploy to Remote Server
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@your_server_ip 'bash -s' << EOF
+          ssh -o StrictHostKeyChecking=no ubuntu@18.232.61.210 'bash -s' << EOF
           # Commands to execute on the remote server
           echo "Hello from GitHub Actions!"
           EOF
