--- a/.github/workflows/server_action.yml
+++ b/.github/workflows/server_action.yml
@@ -1,4 +1,4 @@
-name: Deploy to Remote Server
+name: Deploy to Server
 on:
   push:
     branches:
@@ -9,18 +9,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.4.1
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+    - name: Set up SSH
+      run: |
+        mkdir -p ~/.ssh
+        echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan -H 18.232.61.210 >> ~/.ssh/known_hosts
 
-      - name: Deploy to Remote Server
-        run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@18.232.61.210 'bash -s' << EOF
+    - name: Deploy to Server
+      run: |
+        ssh -o StrictHostKeyChecking=no ubuntu@18.232.61.210 'bash -s' << EOF
           # Commands to execute on the remote server
-          echo "Hello from GitHub Actions!"
+          echo "Hello from GitHub Actions on 18.232.61.210"
+          # Add more commands as needed
           EOF
 
