--- a/.github/workflows/server_action.yml
+++ b/.github/workflows/server_action.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Deploy to Server
       run: |
-        ssh -o StrictHostKeyChecking=no ubuntu@18.232.61.210 'bash -s' << EOF
+        ssh -o StrictHostKeyChecking=no ubuntu@18.232.61.210 'bash -s' << 'EOF'
         # Commands to execute on the remote server
         echo "Hello from GitHub Actions on 18.232.61.210"
         # Add more commands as needed
