--- a/.github/workflows/server_action.yml
+++ b/.github/workflows/server_action.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         eval "$(ssh-agent -s)"
         ssh-add ~/.ssh/id_rsa
-        ssh -o StrictHostKeyChecking=no ubuntu@18.232.61.210 'bash -s' << 'EOF'
+        ssh -o StrictHostKeyChecking=no ubuntu@18.232.61.210 << EOF
         # Commands to execute on the remote server
         echo "Hello from GitHub Actions on 18.232.61.210"
         # Add more commands as needed
